--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "prisma:generate": "prisma generate",
+    "prisma:seed": "tsx prisma/seed.ts",
     "postinstall": "npm run prisma:generate",
     "pretest": "npm run prisma:generate",
     "test": "jest"
@@ -18,7 +19,8 @@
     "next": "15.3.4",
     "prisma": "^6.10.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "recharts": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -33,6 +35,7 @@
     "jest": "^30.0.3",
     "tailwindcss": "^4",
     "ts-jest": "^29.4.0",
+    "tsx": "^4.20.3",
     "typescript": "^5"
   }
 }
